# strava-streamlit

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .sonarcloud.properties  AGENTS.md  README.md  activity_columns.txt  cspell-words.txt  cspell.config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: check.yml
.streamlit/: config-prod.toml  config.toml  secrets-EXAMPLE.toml
scripts/: config_convert.py  copy_real_data.sh  copy_test_data.sh  deploy.sh  gen_requirements.py  install.sh  pytest.sh  run.sh  run_pre-commit.sh  run_pytest.sh  run_ruff.sh  run_vulture.sh  update.sh
src/: app.py  helper.py  helper_activities_caching.py  helper_api.py  helper_logging.py  helper_login.py  helper_pandas.py  helper_ui_components.py  main.py  modify_set_commute.py
src/reports/: 01_Activity_List.py  01_Caching.py  01_Download.py  02_Activity_Stats.py  03_Cal_Export.py  05_Current_Year.py  11_Activity_List.py  12_Activity_Stats.py  20_Known_Locations.py  30_Cal_Export.py  97_Contact.py  98_Internal_Stats.py  99_Logout.py  r01_Caching.py  r01_caching.py  r01_load_data.py  r05_Current_Year.py  r05_current_year.py  r10_Activity_List.py  r10_activity_list.py  r10_activity_list_and_excel_export.py  r20_Activity_Stats.py  r20_activity_statistics.py  r20_activity_stats.py  r40_cal_export.py  r40_calendar_export.py  r50_Known_Locations.py  r50_known_locations.py  r61_set_commute.py  r62_excel_import.py  r88_contact.py  r89_logout.py  r97_contact.py  r98_Internal_Stats.py  r98_internal_stats.py  r99_Logout.py  r99_internal_stats.py  r99_tm_write.py
src/strava-resources/: README.md
tests/: helper_activities_caching_test.py  reports_test.py  test_helper_activities_caching.py  test_r20_Activity_Stats.py  test_r20_activity_stats.py  test_reports.py
tests/testdata/api-cache/: activities-page-0-1.json  activities-page-1.json  gear-b6686831.json  gear-g20604123.json
tests/testdata/knownLocations/: 7656541.txt
