[project]
name = "strava-streamlit"
version = "0.1.0"
description = " Strava Äpp V2 using Streamlit"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy==2.2.3",
    "pandas==2.2.3",
    "pyarrow==20.0.0",
    "sentry-sdk>=2.58.0",
    "streamlit>=1.56.0",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "tomli-w>=1.2.0",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == \"__main__\":"]

[tool.vulture]
paths = ["src"]
# exclude = ["src/models.py"]
ignore_names = ["LOGGER"]
